# rustlikecoding

./: Cargo.toml
assets/shaders/: graph_shader.wgsl
basics/: Cargo.toml
basics/assets/shaders/: graph_shader.wgsl
basics/src/: main.rs
meshes/: Cargo.toml
rendering/: Cargo.toml
rendering/assets/shaders/: blinn_phong.wgsl  bump_mapping.wgsl  custom_material.wgsl  diffuse_shading.wgsl  normal_mapping.wgsl  specular_shading.wgsl
rendering/src/: main.rs  transformations.rs
src/: lib.rs  main.rs
