[package]
name = "rustlikecoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
once_cell = "1.17.1"
rand = "0.8.5"